Version 1.4.11 - 2011-12-26
* Bug fixes (see mercurial logs for details)

Version 1.4.10 - 2011-10-01
* Bug fixes (see mercurial logs for details)

Version 1.4.9 - 2011-05-29
* Bug fixes (see mercurial logs for details)

Version 1.4.8 - 2011-02-13
* Bug fixes (see mercurial logs for details)

Version 1.4.7 - 2010-11-02
* Bug fixes (see mercurial logs for details)

Version 1.4.6 - 2010-07-29
* Some bug fixes (see mercurial logs for details)

Version 1.4.5 - 2010-03-31
* Some bug fixes (see mercurial logs for details)

Version 1.4.4 - 2010-02-16
* Some bug fixes (see mercurial logs for details)

Version 1.4.3 - 2009-12-09
* Some bug fixes (see mercurial logs for details)

Version 1.4.2 - 2009-11-23
* Some bug fixes (see mercurial logs for details)

Version 1.4.1 - 2009-10-20
* Add missing init.sql of SQLite

Version 1.4.0 - 2009-10-19
* Bug fixes (see mercurial logs for details)
* Add datetime_field on xxx2Many to use a specific _datetime when reading the related record
* Add new tool safe_eval
* Handle sequence and history renaming when renaming table
* Add old_password to set_preferences of res.user on password change
* Allow to drop constraint, index and foreign key with custom table name
* Added column_rename on TableHandler
* Add new tool reduce_ids
* Add limit_clause function on cursor
* Fill the cursor cache at search
* Allow rpc on today of ir.date
* Use the module dependency order to apply views that inherits
* Allow to update database at the end of restore
* Add ir.model.access check get and set of ir.property
* Add ModelSingleton
* Move login test in res.user
* Rename osv into model on workflow
* Add logout method
* Move BrowseRecord cache onto the cursor except for Function fields
* Don't order search result if order value is []
* Add reload of modules if files have changed
* Add salt to sha of password
* Add strftime to ir.lang to handle locale's format
* Add sqlite backend
* Add validate test for required and size
* Remove _sequence on ModelSQL